k8s/workloads/beaverhabits/beaverhabits.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beaverhabits
  labels:
    app: beaverhabits
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beaverhabits
  template:
    metadata:
      labels:
        app: beaverhabits
    spec:
      nodeSelector:
        platform.io/type: pi
      securityContext:
        fsGroup: 1000
      containers:
        - name: beaverhabits
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          image: daya0576/beaverhabits
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/.user
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: v1
kind: Service
metadata:
  name: beaverhabits
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: beaverhabits
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: beaverhabits

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`beaverhabits.rvserver.online`)
      kind: Rule
      services:
        - name: beaverhabits
          port: 80
